Change account-organizer.html, change profile latest artists.

--- a/html/account-organiser.html
+++ b/html/account-organiser.html
@@ -96,7 +96,7 @@
                         </div>
                         <div class="artist-perf">
                             <h3>About my performance:</h3>
-                            <p>I have more 15 years of experience being part of some well reconized bands and making
+                            <p>I have more than 15 years of experience being part of some well reconized bands and making
                                 presentatiosn
                                 around the country. I'm a dinamyc and versatile guitarist known for my electrifying
                                 performances
@@ -113,26 +113,18 @@
                                     class="fa-regular fa-star"></i>
                             </div>
                             <div class="artist-briefing">
-                                <img src="../src/hector-bermudez-iIWDt0fXa84-unsplash.jpg" alt="">
-                                <p>Jonh Doe is a dinamyc and versatile guitarist known for his electrifying performances
-                                    and
-                                    soulful
-                                    sound.</p>
+                                <img src="../src/Singer.jpg" alt="">
+                                <p>Jane Smith is a captivating and versatile vocalist known for her powerful performances and enchanting voice.</p>
                             </div>
                             <ul>
-                                <li>Pricing starts at: <span>$ 125</span></li>
-                                <li>Pick me for: <span>Rock and Jazz</span></li>
-                                <li>Location: <span>Vancouvver, BC</span></li>
+                                <li>Pricing starts at: <span>$ 150</span></li>
+                                <li>Pick me for: <span>Pop and Soul</span></li>
+                                <li>Location: <span>Surrey, BC</span></li>
                             </ul>
                         </div>
                         <div class="artist-perf">
                             <h3>About my performance:</h3>
-                            <p>I have more 15 years of experience being part of some well reconized bands and making
-                                presentatiosn
-                                around the country. I'm a dinamyc and versatile guitarist known for my electrifying
-                                performances
-                                and
-                                soulful sound. I have my own equipment and transportation.</p>
+                            <p>I have over 10 years of experience performing with renowned artists and captivating audiences across the country. I'm a versatile vocalist with a powerful and enchanting voice that leaves audiences spellbound. I bring my own professional sound system and have reliable transportation.</p>
                             <a href="./parul-booking.html" class="book-artist">Book</a>
                         </div>
                     </div>
@@ -144,26 +136,18 @@
                                     class="fa-regular fa-star"></i>
                             </div>
                             <div class="artist-briefing">
-                                <img src="../src/hector-bermudez-iIWDt0fXa84-unsplash.jpg" alt="">
-                                <p>Jonh Doe is a dinamyc and versatile guitarist known for his electrifying performances
-                                    and
-                                    soulful
-                                    sound.</p>
+                                <img src="../src/violinist.jpg" alt="">
+                                <p>Emily Davis is a talented and expressive violinist known for her emotive performances and technical mastery.</p>
                             </div>
                             <ul>
-                                <li>Pricing starts at: <span>$ 125</span></li>
-                                <li>Pick me for: <span>Rock and Jazz</span></li>
-                                <li>Location: <span>Vancouvver, BC</span></li>
+                                <li>Pricing starts at: <span>$ 175</span></li>
+                                <li>Pick me for: <span>Classical and Folk</span></li>
+                                <li>Location: <span>Burnaby, BC</span></li>
                             </ul>
                         </div>
                         <div class="artist-perf">
                             <h3>About my performance:</h3>
-                            <p>I have more 15 years of experience being part of some well reconized bands and making
-                                presentatiosn
-                                around the country. I'm a dinamyc and versatile guitarist known for my electrifying
-                                performances
-                                and
-                                soulful sound. I have my own equipment and transportation.</p>
+                            <p>With more than 12 years of experience, I have played with prestigious orchestras and have performed at various esteemed venues. I'm an expressive violinist with a deep passion for both classical and folk music. I come equipped with my own high-quality violin and sound system, ensuring a top-notch performance every time.</p>
                             <a href="./parul-booking.html" class="book-artist">Book</a>
                         </div>
                     </div>
