--- a/html/homepage.html
+++ b/html/homepage.html
@@ -27,7 +27,7 @@
                     <li><a href="#">About us</a></li>
                     <li><a href="#">Book an artist</a></li>
                     <li><a href="#">Join our artists</a></li>
-                    <li><a id="nav-search" href="">Search<i class="fa-solid fa-magnifying-glass"></i></a></li>
+                    <!-- <li><a id="nav-search" href="">Search<i class="fa-solid fa-magnifying-glass"></i></a></li> -->
                     <li><a href="../html/login.html">Log In</a></li>
                 </ul>
             </nav>
