--- a/html/homepage.html
+++ b/html/homepage.html
@@ -24,9 +24,9 @@
             <nav>
                 <ul>
                     <li><a href="../html/homepage.html" class="active">Home</a></li>
-                    <li><a href="#">About us</a></li>
-                    <li><a href="#">Book an artist</a></li>
-                    <li><a href="#">Join our artists</a></li>
+                    <li><a href="../html/homepage.html">About us</a></li>
+                    <li><a href="../html/homepage.html">Book an artist</a></li>
+                    <li><a href="../html/homepage.html">Join our artists</a></li>
                     <!-- <li><a id="nav-search" href="">Search<i class="fa-solid fa-magnifying-glass"></i></a></li> -->
                     <li><a href="../html/login.html">Log In</a></li>
                 </ul>
