--- a/html/login.html
+++ b/html/login.html
@@ -22,10 +22,10 @@
             <div class="navbar">
                 <nav>
                     <ul>
-                        <li><a href="Home">Home</a></li>
-                        <li><a href="About Us">About us</a></li>
-                        <li><a href="">Book an artist</a></li>
-                        <li><a href="">Join our artist</a></li>
+                        <li><a href="./homepage.html">Home</a></li>
+                        <li><a href="./homepage.html">About us</a></li>
+                        <li><a href="./homepage.html">Book an artist</a></li>
+                        <li><a href="./homepage.html">Join our artist</a></li>
                         <li class="login-btn"><a href="">Login</a></li>
                     </ul>
                 </nav>
