some nav changes

--- a/html/bookings.html
+++ b/html/bookings.html
@@ -9,6 +9,7 @@
     <title>My Booking</title>
 
     <link rel="stylesheet" href="../css/bookings.css">
+    <!-- <link rel="stylesheet" href="../css/search-bar.css"> -->
     <!-- <link rel="stylesheet" href="../css/headerstyle.css"> -->
     <!-- <link rel="stylesheet" href="../css/main-footer.css"> -->
 
