--- a/html/header.html
+++ b/html/header.html
@@ -1,3 +1,10 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<link rel="stylesheet" href="../css/search-bar.css">
+<script type="module" src="../javascript/search-bar.js" defer></script>
+
 <div class="headerContent">
     <div class="site-heading">
         <img src="../src/Untitled-9.png" alt="logo">
@@ -20,7 +27,7 @@
                 <li class="login-btn"><a href="">Login</a></li> -->
             </ul>
         </nav>
-        <div class="search"><a href="">Search <i class="fa-solid fa-magnifying-glass"></i></a></div>
+        <!-- <div class="search"><a href="">Search<i class="fa-solid fa-magnifying-glass"></i></a></div> -->
         <div class="menuBtn">
             <a href="#"><i class="fa-solid fa-bars"></i></a>
         </div>
