fix for navigation search for all pages

--- a/html/header.html
+++ b/html/header.html
@@ -20,14 +20,10 @@
                 <li><a href="../html/chat.html">Chat</a></li>
                 <li><a href="" id="myProfile">My Profile</a></li>
                 <li><a href="" id="logoutBtn">Logout</a></li>
+                <li><a id="search">Search<i class="fa-solid fa-magnifying-glass"></i></a></li>
 
-                <!-- <li><a href="About Us">About us</a></li>
-                <li><a href="">Book an artist</a></li>
-                <li><a href="">Join our artist</a></li>
-                <li class="login-btn"><a href="">Login</a></li> -->
             </ul>
         </nav>
-        <!-- <div class="search"><a href="">Search<i class="fa-solid fa-magnifying-glass"></i></a></div> -->
         <div class="menuBtn">
             <a href="#"><i class="fa-solid fa-bars"></i></a>
         </div>
