--- a/html/account-organiser.html
+++ b/html/account-organiser.html
@@ -22,6 +22,21 @@
 
     <!--  -->
     <main>
+        <div class="search-container">
+            <form action="#">
+                <button class="search-close-btn" id="searchCloseBtn"><i class="fa-solid fa-xmark"></i></button>
+
+                <label for="search">Search</label>
+                <div class="search-bar">
+
+                    <input type="search" name="search" id="search-input" placeholder="Search artists here">
+                    <button class="get-search" id="searchBtn">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <!-- <span class="fa-solid fa-rectangle-xmark"></span> -->
+                    </button>
+                </div>
+            </form>
+        </div>
         <div class="user-data">
             <section class="profile">
                 <div class="profile-div">
