UI fixes for offline page and minor UI changes

--- a/html/account-artist.html
+++ b/html/account-artist.html
@@ -53,12 +53,12 @@
                     </div>
 
                     <div class="artist-briefing">
-                        <img id="profile-pic" src="../src/hector-bermudez-iIWDt0fXa84-unsplash.jpg" alt="">
+                        <img id="profile-pic" src="../src/person.png" alt="">
                         <p id="summary"> </p>
                     </div>
 
                     <ul>
-                        <li>Priving starts at: <span id="pricing"></span></li>
+                        <li>Pricing starts at: <span id="pricing"></span></li>
                         <li>Pick me for: <span id="category"></span></li>
                         <li>Location: <span id="address"></span></li>
                     </ul>
