--- a/html/account-organiser.html
+++ b/html/account-organiser.html
@@ -42,7 +42,7 @@
                 <div class="profile-div">
                     <h1 id="name"></h1>
                     <article>
-                        <img id="profile-image" src="" alt="">
+                        <img id="profile-image" src="../src/person.png" alt="">
                         <p id="summary"></p>
                     </article>
                     <div class="addressSec">
