--- a/html/edit-account-artist.html
+++ b/html/edit-account-artist.html
@@ -31,7 +31,7 @@
         <h1> Let's get to know you better!</h1>
         <div class="user-avatar">
             <img id="profile-pic"
-                src=""
+                src="../src/person.png"
                 alt="user photo">
             <input type="file" id="imageInput" accept="image/*">
             <input type="button" id="uploadImageBtn" value="Upload">
