--- a/html/edit-account-organiser.html
+++ b/html/edit-account-organiser.html
@@ -24,7 +24,7 @@
 
             <div class="user-avatar">
                 <img
-                src=""
+                src="../src/person.png"
                 id="profile-image" alt="user avatar">
             </div>
             <input id="start-camera" type="button" value="Start Camera">
