--- a/html/offline.html
+++ b/html/offline.html
@@ -5,31 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Offline</title>
+    <link rel="stylesheet" href="../css/headerstyle.css">
+    <link rel="stylesheet" href="../css/main-footer.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Oswald:wght@200..700&display=swap');
-
-        body {
-            font-family: 'Nunito Sans';
-            margin: 0;
-            line-height: 1.4;
+        footer {
+            width: 100vw;
         }
-
-        h1,
-        h2,
-        h3 {
-            font-family: Oswald;
-            font-weight: normal;
-        }
-
-        main {
-            max-width: 800px;
-            margin: auto;
-            text-align: center;
-        }
-
         .offline-content {
             padding: 1rem;
             margin: 1rem;
+            text-align: center;
         }
 
         #reload {
@@ -38,16 +23,54 @@
             color: white;
             cursor: pointer;
         }
+        img {
+            padding: 1rem;
+            margin: 1rem;
+            display: inline;
+            border-radius: 20px;
+        }
     </style>
 </head>
 
 <body>
     <header>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+            integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+        <link rel="stylesheet" href="../css/search-bar.css">
+        <script type="module" src="../javascript/search-bar.js" defer></script>
+
+        <div class="headerContent">
+            <div class="site-heading">
+                <img src="../src/Untitled-9.png" alt="logo">
+                <h1>artist alley</h1>
+            </div>
+            <h1 id="title"></h1>
+
+            <div class="navbar">
+                <nav>
+                    <ul>
+                        <li><a href="../html/homepage.html">Home</a></li>
+                        <li><a href="../html/bookings.html">My Bookings</a></li>
+                        <li><a href="../html/chat.html">Chat</a></li>
+                        <li><a href="" id="myProfile">My Profile</a></li>
+                        <li><a href="" id="logoutBtn">Logout</a></li>
+                        <li><a id="search">Search<i class="fa-solid fa-magnifying-glass"></i></a></li>
+
+                    </ul>
+                </nav>
+                <div class="menuBtn">
+                    <a href="#"><i class="fa-solid fa-bars"></i></a>
+                </div>
+            </div>
+
+        </div>
     </header>
 
     <main>
         <div class="offline-content">
+            <img src="../src/monkey.gif" alt="gif">
             <!-- <img src="../src/Untitled-9.png" alt="Logo"> -->
             <h1>OOPS! You lost your internet connection.</h1>
             <p>Try to re-connect to a network or reload the page</p>
@@ -57,7 +80,45 @@
     </main>
 
     <footer>
+        <div class="footerContent">
 
+            <div class="footer-head">
+                <img src="../src/logo2.png" alt="">
+                <p>Your source for artistic excellence, delivering creativity and talent for every occasion.</p>
+                <div class="icons">
+                    <ul>
+                        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="quick-links">
+                <p>Quick links</p>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Book an artist</a></li>
+                    <li><a href="#">Join our artist</a></li>
+                </ul>
+            </div>
+
+            <div class="contact-us">
+                <p>Contact us</p>
+                <ul>
+                    <li><a href="#">1-800-123-4567</a></li>
+                    <li><a href="#">info@artistalley.com</a></li>
+                    <li><a href="#">4878, Main street, Vancouver, BC, V52TP</a></li>
+                </ul>
+            </div>
+
+            <div class="copyright">
+                <p>&copy; 2024 Artist Alley. All rights reserved. | privacy Policy | Terms of Service</p>
+            </div>
+
+        </div>
     </footer>
 </body>
 
