--- a/html/account-organiser.html
+++ b/html/account-organiser.html
@@ -117,7 +117,7 @@
                                 performances
                                 and
                                 soulful sound. I have my own equipment and transportation.</p>
-                            <a href="./parul-booking.html" class="book-artist">Book</a>
+                            <a href="" class="book-artist">Book</a>
                         </div>
                     </div>
                     <div class="artist-descp">
@@ -140,7 +140,7 @@
                         <div class="artist-perf">
                             <h3>About my performance:</h3>
                             <p>I have over 10 years of experience performing with renowned artists and captivating audiences across the country. I'm a versatile vocalist with a powerful and enchanting voice that leaves audiences spellbound. I bring my own professional sound system and have reliable transportation.</p>
-                            <a href="./parul-booking.html" class="book-artist">Book</a>
+                            <a href="" class="book-artist">Book</a>
                         </div>
                     </div>
                     <div class="artist-descp">
@@ -163,7 +163,7 @@
                         <div class="artist-perf">
                             <h3>About my performance:</h3>
                             <p>With more than 12 years of experience, I have played with prestigious orchestras and have performed at various esteemed venues. I'm an expressive violinist with a deep passion for both classical and folk music. I come equipped with my own high-quality violin and sound system, ensuring a top-notch performance every time.</p>
-                            <a href="./parul-booking.html" class="book-artist">Book</a>
+                            <a href="" class="book-artist">Book</a>
                         </div>
                     </div>
                 </div>
